# aria

./: .gitignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
scripts/: generate-icons.mjs
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: README.md
src-tauri/src/: audio_test.rs  commands.rs  lib.rs  main.rs  system_contacts.rs
src-tauri/src/sip/: account.rs  auth.rs  builder.rs  codec.rs  diagnostics.rs  ice.rs  media.rs  mod.rs  presence.rs  srtp.rs  transfer.rs  transport.rs
src-tauri/src/sip/handlers/: invite.rs  mod.rs  presence.rs  registration.rs  request.rs
src-tauri/src/sip/state/: call.rs  mod.rs  registration.rs
src/audio/: dtmf.ts
src/components/call/: AudioLevelMeter.tsx  CallControls.tsx  CallScreen.tsx  RecordingIndicator.tsx
src/components/contacts/: ContactList.tsx
src/components/diagnostics/: DiagnosticPanel.tsx
src/components/dialer/: Dialer.tsx  DialerButton.tsx
src/components/history/: CallHistory.tsx
src/components/layout/: AppShell.tsx  NavRail.tsx  StatusBar.tsx
src/components/settings/: Settings.tsx
src/components/wizard/: QrScanner.tsx  SetupWizard.tsx
src/hooks/: useCallTimer.ts  useKeyboardShortcuts.ts  useNetworkMonitor.ts  usePresence.ts  useRingback.ts  useRingtone.ts  useSip.ts
src/i18n/: index.ts
src/locales/: de.json  en.json  es.json  fr.json
src/stores/: appStore.ts
src/theme/: index.ts
src/types/: sip.ts
src/utils/: credentials.ts  log.ts
